syntax = "proto3";

option csharp_namespace = "GrpcClientProfile";

service ClientProfile {
	rpc GetClientBasicDataByUserId(GetClientBasicDataByUserIdRequest) returns (ClientBasicData);
}

message GetClientBasicDataByUserIdRequest {
	string userId = 1;
}

message ClientBasicData {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
}
